fix: add postgres user for fetching creds from config server

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
   application:
     name: user-profile-ws
   profiles:
-    active: discovery-service-user #??????? ????????? ??????? ?????????? ????? ?? ???????, ????? ????????? ?? ?? ?????????
+    active: discovery-service-user, postgres-user
   config:
     import: optional:configserver:http://${CONFIG_SERVER_USER}:${CONFIG_SERVER_PASSWORD}@${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8012}
 
