--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,8 @@ repositories {
 }
 
 dependencies {
-    implementation platform('com.github.MrShoffen:task-tracker-dependencies-versions:1.4.0')
-    annotationProcessor platform('com.github.MrShoffen:task-tracker-dependencies-versions:1.4.0')
+    implementation platform('com.github.MrShoffen:task-tracker-dependencies-versions:1.4.1')
+    annotationProcessor platform('com.github.MrShoffen:task-tracker-dependencies-versions:1.4.1')
 
     implementation 'com.github.MrShoffen:task-tracker-commons'
 
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.kafka:spring-kafka'
 
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
