--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ postgres-user:
 
 #
 kafka-user:
-  hostname: test
+  bootstrap-servers: 192.168.0.125:29092,192.168.0.125:39092,192.168.0.125:49092
 ###
 
 
@@ -26,7 +26,7 @@ spring:
   application:
     name: user-profile-ws
   profiles:
-    active: discovery-service-user, postgres-user
+    active: discovery-service-user, postgres-user, kafka-user
   config:
     import: optional:configserver:http://${CONFIG_SERVER_USER}:${CONFIG_SERVER_PASSWORD}@${CONFIG_SERVER_HOST:localhost}:${CONFIG_SERVER_PORT:8012}
 
@@ -42,6 +42,16 @@ spring:
       format_sql: true
       hbm2ddl.auto: validate
 
+  kafka:
+    bootstrap-servers: ${kafka-user.bootstrap-servers}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.UUIDSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      retries: 3
+      properties:
+        enable.idempotence: true
+
 
 server.port: ${PORT:0}
 
@@ -52,15 +62,3 @@ eureka:
   instance:
     prefer-ip-address: true
 
-
-management:
-  endpoint:
-    gateway:
-      access: unrestricted
-    health:
-      probes:
-        enabled: true
-  endpoints:
-    web:
-      exposure:
-        include: health, gateway, mappings
