feat: add registration flow handling

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,13 +44,12 @@ spring:
 
   kafka:
     bootstrap-servers: ${kafka-user.bootstrap-servers}
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.UUIDSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      acks: all
-      retries: 3
+    consumer:
+      group-id: ${spring.application.name}  # Уникальный идентификатор группы
+      key-deserializer: org.apache.kafka.common.serialization.UUIDDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
-        enable.idempotence: true
+        spring.json.trusted.packages: "org.mrshoffen.tasktracker.commons.kafka.event.*"
 
 
 server.port: ${PORT:0}
@@ -61,4 +60,6 @@ eureka:
       defaultZone: http://${discovery-service-user.server.hostname}:${discovery-service-user.server.port}/eureka
   instance:
     prefer-ip-address: true
+    instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 
