chore: update dependency platform

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,7 +49,7 @@ spring:
         spring.json.trusted.packages: "org.mrshoffen.tasktracker.commons.kafka.event.*"
 
 
-server.port: ${PORT:0}
+server.port: ${PORT:8080}
 
 eureka:
   client:
@@ -59,4 +59,16 @@ eureka:
     prefer-ip-address: true
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-
+management:
+  metrics:
+    tags:
+      application: ${spring.application.name}
+  endpoint:
+    metrics:
+      access: read_only
+    prometheus:
+      access: read_only
+  endpoints:
+    web:
+      exposure:
+        include: prometheus, metrics
